--- a/app/src/main/res/layout/fragment_pet_details.xml
+++ b/app/src/main/res/layout/fragment_pet_details.xml
@@ -5,13 +5,18 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
     <WebView
         android:id="@+id/wbView"
         android:layout_width="0sp"
         android:layout_height="0sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <ProgressBar
         android:id="@+id/progress"
