--- a/app/src/main/res/layout/item_pets.xml
+++ b/app/src/main/res/layout/item_pets.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardRootView"
     android:layout_width="match_parent"
@@ -23,9 +22,9 @@
             android:layout_width="@dimen/margin_80"
             android:layout_height="@dimen/margin_80"
             app:cardCornerRadius="@dimen/margin_8"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/ivPet"
@@ -41,14 +40,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_20"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textSize="@dimen/font_22"
             android:text="@string/dummy_title"
             android:textColor="@color/black"
+            android:textSize="@dimen/font_22"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/crdImg"
-           app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
