--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,7 +5,7 @@
     android:id="@+id/toolbarLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
+    android:background="@color/purple_700"
     android:orientation="vertical"
     android:paddingTop="@dimen/margin_15">
 
@@ -40,7 +40,7 @@
                 android:contentDescription="@string/app_name"
                 android:paddingEnd="@dimen/margin_9"
                 android:src="@drawable/ic_back"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -48,61 +48,18 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvTitle"
-                style="@style/text_field_title_semibold_20"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:paddingTop="@dimen/margin_4"
-                android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="@dimen/margin_35"
+                android:gravity="center"
+                android:paddingTop="@dimen/margin_4"
+                android:text="Test"
+                android:textColor="@color/white"
+                android:textSize="@dimen/font_22"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ivLeft"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.constraintlayout.widget.Group
-                android:id="@+id/grpNotificationView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:constraint_referenced_ids="icNotification,ivDot"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/icNotification"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_notification"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/icChat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_chat"
-                app:tint="@color/white"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/ivDot"
-                android:layout_width="@dimen/margin_6"
-                android:layout_height="@dimen/margin_6"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="@dimen/margin_2"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_circle"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="@+id/icNotification"
-                app:layout_constraintTop_toTopOf="@+id/icNotification" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.appbar.AppBarLayout>
