--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,22 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph"
-    app:startDestination="@id/splashFragment">
+    app:startDestination="@id/PetListFragment">
 
-<!--    <fragment-->
-<!--        android:id="@+id/splashFragment"-->
-<!--        android:name="com.maf.deadbeat.ui.auth.fragment.SplashFragment"-->
-<!--        android:label="SplashFragment"-->
-<!--        tools:layout="@layout/fragment_splash">-->
-<!--        <action-->
-<!--            android:id="@+id/action_splashFragment_to_loginFragment"-->
-<!--            app:destination="@id/loginFragment"-->
-<!--            app:enterAnim="@anim/from_right"-->
-<!--            app:exitAnim="@anim/to_left"-->
-<!--            app:popUpTo="@id/splashFragment"-->
-<!--            app:popUpToInclusive="true" />-->
+    <fragment
+        android:id="@+id/PetListFragment"
+        android:name="com.sepia.pets.ui.fragment.PetsListFragment"
+        android:label="PetListFragment"
+        tools:layout="@layout/fragment_pets_list">
+        <action
+            android:id="@+id/action_petList_to_petDetails"
+            app:destination="@id/PetDetailsFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
 
-
-<!--    </fragment>-->
-
+    </fragment>
+    <fragment
+        android:id="@+id/PetDetailsFragment"
+        android:name="com.sepia.pets.ui.fragment.PetDetailsFragment"
+        android:label="PetListFragment"
+        tools:layout="@layout/fragment_pet_details"/>
 </navigation>
